# eduNFT

./: main.py  pyproject.toml
api/: dalle.py  helper.py  ipfs.py  order.py
